update wsgi part

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
   <body>
     <form method="post" action="/test">
       <table>
-        <tr><td>Password:</td><td><input type="text" name="password" value="helloworld!" /></td></tr>
-        <tr><td>Org:</td><td><input type="text" name="org" value="cpe200-159-sec1" /></td></tr>
-        <tr><td>Repo:</td><td><input type="text" name="repo" value="cpe200-week1-lab" /></td></tr>
+        <tr><td>Password:</td><td><input type="text" name="password" value="" /></td></tr>
+        <tr><td>Org:</td><td><input type="text" name="org" value="" /></td></tr>
+        <tr><td>Repo:</td><td><input type="text" name="repo" value="" /></td></tr>
       </table>
       <input type="submit" />
     </form>
